<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_rating_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_rating_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/_rating_title"
            android:textColor="@color/rating_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_rating_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="40dp"
            android:text="@string/_rating_des"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_rate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_star_disable" />

            <ImageView
                android:id="@+id/btn_rate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_star_disable" />

            <ImageView
                android:id="@+id/btn_rate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_star_disable" />

            <ImageView
                android:id="@+id/btn_rate4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_star_disable" />

            <ImageView
                android:id="@+id/btn_rate5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_star_disable" />
        </LinearLayout>

        <TextView
            android:id="@+id/star_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/rating_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_rating_edit"
            android:gravity="top|left"
            android:hint="@string/_rating_comment_hint"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_maybe_later"
                android:textColor="@color/rating_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_dialog"
            android:paddingHorizontal="10dp"
            android:text="@string/_submit"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/rating_circle_pink"
        android:backgroundTint="@color/white"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/rating_circle_pink"
            android:padding="12dp"
            android:src="@drawable/heath" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>